--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                     </li>
                     <li>
                         <div class="nav-link nav-link4">
-                            <i class="fas fa-robot"></i>
-                            <p>bot</p>
+                            <i class="fas fa-chart-pie"></i>
+                            <p>Stats</p>
                         </div>
                     </li>
                     <li>
@@ -59,6 +59,120 @@
             <section class="sub-container">
                 <!--Home Section-->
                 <section class="home-section">
+                    <div class="home-container">
+                        <div class="cash_flow">
+                            <div class="title">Financial Overview</div>
+                            <div class="cash_in">
+                                <h2>Cash In</h2>
+                                <p>0.00</p>
+                            </div>
+                            <div class="cash_out">
+                                <h2>Cash Out</h2>
+                                <p>0.00</p>
+                            </div>
+                            <div class="fees">
+                                <h2>Fees</h2>
+                                <p>0.00</p>
+                            </div>
+                            <div class="balance">
+                                <h2>Balance</h2>
+                                <p>0.00</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="transactions">
+                        <div class="controler">
+                            <div class="topper">
+                                <div class="title">
+                                    <p>Transactions</p>
+                                </div>
+                                <div class="time-filters">
+                                    <div class="search">
+                                        <input type="text" placeholder="Search" class="placeholder">
+                                        <i class="fas fa-search"></i>
+                                    </div>
+                                    <div class="calendar">
+                                        <input type="date" class="date" class="inputcalendar">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="filter">
+                                <div class="transaction_types">
+                                    <a class="all">All</a>
+                                    <a class="purchase">Purchase</a>
+                                    <a class="transfer">Transfer</a>
+                                    <a class="withdrawal">Withdraw</a>
+                                    <a class="deposit">Deposit</a>
+                                    <a class="failed">Failed</a>
+                                    <a class="airtime">Airtime</a>
+                                    <a class="cashpower">CashPower</a>
+                                    <a class="reversed">Reversed</a>
+                                    <a class="payments">Payments</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="table">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Date</th>
+                                        <th>Transaction ID</th>
+                                        <th>Type</th>
+                                        <th>Amount</th>
+                                        <th>Balance</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>2020-11-11 12:00:00</td>
+                                        <td>123456789</td>
+                                        <td>Deposit</td>
+                                        <td>1000.00</td>
+                                        <td>1000.00</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2020-11-11 12:00:00</td>
+                                        <td>123456789</td>
+                                        <td>Deposit</td>
+                                        <td>1000.00</td>
+                                        <td>1000.00</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2020-11-11 12:00:00</td>
+                                        <td>123456789</td>
+                                        <td>Deposit</td>
+                                        <td>1000.00</td>
+                                        <td>1000.00</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2020-11-11 12:00:00</td>
+                                        <td>123456789</td>
+                                        <td>Deposit</td>
+                                        <td>1000.00</td>
+                                        <td>1000.00</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2020-11-11 12:00:00</td>
+                                        <td>123456789</td>
+                                        <td>Deposit</td>
+                                        <td>1000.00</td>
+                                        <td>1000.00</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2020-11-11 12:00:00</td>
+                                        <td>123456789</td>
+                                        <td>Deposit</td>
+                                        <td>1000.00</td>
+                                        <td>1000.00</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2020-11-11 12:00:00</td>
+                                        <td>123456789</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </section>
                 <!--Add File Section -->
                 <section class="Add-file-section">
