--- a/index.html
+++ b/index.html
@@ -1,200 +1,198 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="./images/logo_mtn_transparent.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/fontawesome.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/brands.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
-        <link rel="stylesheet" href="./index.css">
-        <title>Momo-Analyst</title>
-    </head>
 
-    <body>
-        <section class="container">
-            <nav>
-                <div class="logo">
-                    <img src="./images/logo_mtn_transparent.png" alt="logo" class="logo">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./images/logo_mtn_transparent.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/fontawesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/brands.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
+  <link rel="stylesheet" href="./index.css">
+  <title>Momo-Analyst</title>
+</head>
+
+<body>
+  <section class="container">
+    <nav>
+      <div class="logo">
+        <img src="./images/logo_mtn_transparent.png" alt="logo" class="logo">
+      </div>
+      <ul class="nav-links">
+        <li>
+          <div class="nav-link nav-link1">
+            <i class="fas fa-home"></i>
+            <p>Home</p>
+          </div>
+        </li>
+        <li>
+          <div class="nav-link nav-link2">
+            <i class="fas fa-file-alt"></i>
+            <p>Add File</p>
+          </div>
+        </li>
+        <li>
+          <div class="nav-link nav-link-print">
+            <i class="fas fa-print"></i>
+            <p>Print</p>
+          </div>
+        </li>
+        <li>
+          <div class="nav-link nav-link3">
+            <i class="fas fa-clipboard-list"></i>
+            <p>Budget</p>
+          </div>
+        </li>
+        <li>
+          <div class="nav-link nav-link4">
+            <i class="fas fa-chart-pie"></i>
+            <p>Stats</p>
+          </div>
+        </li>
+        <li>
+          <div class="nav-link nav-link5">
+            <i class="fas fa-cog"></i>
+            <p>Settings</p>
+          </div>
+        </li>
+      </ul>
+    </nav>
+    <section class="sub-container">
+      <!--Home Section-->
+      <section class="home-section">
+        <div class="home-container">
+          <div class="cash_flow">
+            <div class="title">Financial Overview</div>
+            <div class="cash_in">
+              <h2>Cash In</h2>
+              <p>0.00</p>
+            </div>
+            <div class="cash_out">
+              <h2>Cash Out</h2>
+              <p>0.00</p>
+            </div>
+            <div class="fees">
+              <h2>Fees</h2>
+              <p>0.00</p>
+            </div>
+            <div class="balance">
+              <h2>Balance</h2>
+              <p>0.00</p>
+            </div>
+          </div>
+        </div>
+        <div class="transactions">
+          <div class="controler">
+            <div class="topper">
+              <div class="title">
+                <p>Transactions</p>
+              </div>
+              <div class="time-filters">
+                <div class="search">
+                  <input type="text" placeholder="Search" class="placeholder">
+                  <i class="fas fa-search"></i>
                 </div>
-                <ul class="nav-links">
-                    <li>
-                        <div class="nav-link nav-link1">
-                            <i class="fas fa-home"></i>
-                            <p>Home</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nav-link nav-link2">
-                            <i class="fas fa-file-alt"></i>
-                            <p>Add File</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nav-link nav-link3">
-                            <i class="fas fa-print"></i>
-                            <p>Print</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nav-link nav-link3">
-                            <i class="fas fa-clipboard-list"></i>
-                            <p>Budget</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nav-link nav-link4">
-                            <i class="fas fa-chart-pie"></i>
-                            <p>Stats</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="nav-link nav-link5">
-                            <i class="fas fa-cog"></i>
-                            <p>Settings</p>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-            <section class="sub-container">
-                <!--Home Section-->
-                <section class="home-section">
-                    <div class="home-container">
-                        <div class="cash_flow">
-                            <div class="title">Financial Overview</div>
-                            <div class="cash_in">
-                                <h2>Cash In</h2>
-                                <p>0.00</p>
-                            </div>
-                            <div class="cash_out">
-                                <h2>Cash Out</h2>
-                                <p>0.00</p>
-                            </div>
-                            <div class="fees">
-                                <h2>Fees</h2>
-                                <p>0.00</p>
-                            </div>
-                            <div class="balance">
-                                <h2>Balance</h2>
-                                <p>0.00</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="transactions">
-                        <div class="controler">
-                            <div class="topper">
-                                <div class="title">
-                                    <p>Transactions</p>
-                                </div>
-                                <div class="time-filters">
-                                    <div class="search">
-                                        <input type="text" placeholder="Search" class="placeholder">
-                                        <i class="fas fa-search"></i>
-                                    </div>
-                                    <div class="calendar">
-                                        <input type="date" class="date" class="inputcalendar">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="filter">
-                                <div class="transaction_types">
-                                    <a class="all">All</a>
-                                    <a class="purchase">Purchase</a>
-                                    <a class="transfer">Transfer</a>
-                                    <a class="withdrawal">Withdraw</a>
-                                    <a class="deposit">Deposit</a>
-                                    <a class="failed">Failed</a>
-                                    <a class="airtime">Airtime</a>
-                                    <a class="cashpower">CashPower</a>
-                                    <a class="reversed">Reversed</a>
-                                    <a class="payments">Payments</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="table">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Date</th>
-                                        <th>Transaction ID</th>
-                                        <th>Type</th>
-                                        <th>Amount</th>
-                                        <th>Balance</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>2020-11-11 12:00:00</td>
-                                        <td>123456789</td>
-                                        <td>Deposit</td>
-                                        <td>1000.00</td>
-                                        <td>1000.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2020-11-11 12:00:00</td>
-                                        <td>123456789</td>
-                                        <td>Deposit</td>
-                                        <td>1000.00</td>
-                                        <td>1000.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2020-11-11 12:00:00</td>
-                                        <td>123456789</td>
-                                        <td>Deposit</td>
-                                        <td>1000.00</td>
-                                        <td>1000.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2020-11-11 12:00:00</td>
-                                        <td>123456789</td>
-                                        <td>Deposit</td>
-                                        <td>1000.00</td>
-                                        <td>1000.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2020-11-11 12:00:00</td>
-                                        <td>123456789</td>
-                                        <td>Deposit</td>
-                                        <td>1000.00</td>
-                                        <td>1000.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2020-11-11 12:00:00</td>
-                                        <td>123456789</td>
-                                        <td>Deposit</td>
-                                        <td>1000.00</td>
-                                        <td>1000.00</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2020-11-11 12:00:00</td>
-                                        <td>123456789</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </section>
-                <!--Add File Section -->
-                <section class="Add-file-section">
-                    <div class="file-upload">
-                        <h1>UPLOAD A MESSAGES FILE</h1>
-                        <input type="file" id="file" class="file" style="display: none;">
-                        <label for="file" class="file-label">
-                            <i class="fas fa-file-upload"></i>
-                        </label>
-                    </div>
-                </section>
-                <!--Print Section -->
-                <section class="print-section"></section>
-                <!--Budget Section-->
-                <section class="budget-section"></section>
-                <!--Bot Section-->
-                <section class="bot-section"></section>
-                <!--Settings-->
-                <section class="settings-section"></section>
-            </section>
-        </section>
-        <script src="./index.js"></script>
-    </body>
+                <div class="calendar">
+                  <input type="date" class="date" class="inputcalendar">
+                </div>
+              </div>
+            </div>
+            <div class="filter">
+              <div class="transaction_types">
+                <div class="fil">
+                  <a class="cashpower" data-type="cashpower">CashPower</a>
+                  <a class="codeholders" data-type="codeholders">CodeHolders</a>
+                </div>
+                <div class="fil">
+                  <a class="airtime" data-type="airtime">Airtime</a>
+                  <a class="bundles" data-type="bundles">Bundles</a>
+                </div>
+                <div class="fil">
+                  <a class="incomingmoney" data-type="incomingmoney">Incoming</a>
+                  <a class="nontransaction" data-type="nontransaction">NonCash</a>
+                </div>
+                <div class="fil">
+                  <a class="deposit" data-type="deposit">Deposit</a>
+                  <a class="failedtransactions" data-type="failedtransactions">Failed</a>
+                </div>
+                <div class="fil">
+                  <a class="thirdparty" data-type="thirdparty">ThirdParty</a>
+                  <a class="transfer" data-type="transfer">Transfer</a>
+                </div>
+                <div class="fil">
+                  <a class="payments" data-type="payments">Payments</a>
+                  <a class="reversedtransactions" data-type="reversedtransactions">Reversed</a>
+                </div>
+                <div class="fil">
+                  <a class="withdraw" data-type="withdraw">Withdraw</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="table"></div>
+        </div>
+      </section>
+      <!--Add File Section -->
+      <section class="Add-file-section">
+        <div class="file-upload">
+          <h1>UPLOAD A MESSAGES FILE</h1>
+          <input type="file" id="file" class="file" style="display: none;" accept=".xml">
+          <label for="file" class="file-label">
+            <i class="fas fa-file-upload"></i>
+          </label>
+          <p id="file-error" style="color: red; display: none;">Please upload a valid XML file.</p>
+        </div>
+      </section>
+      <!--Print Section -->
+      <section class="print-section">
+      </section>
+      <!--Budget Section-->
+      <section class="budget-section">
+        <div class="budget-container">
+          <h1>Budget</h1>
+          <div class="budget-content">
+            <form id="budget-form">
+              <div class="form-group">
+                <label for="item">Item</label>
+                <input type="text" id="item" name="item" required>
+              </div>
+              <div class="form-group">
+                <label for="amount">Amount</label>
+                <input type="number" id="amount" name="amount" required>
+              </div>
+              <button type="submit">Add to Budget</button>
+            </form>
+            <table id="budget-table">
+              <thead>
+                <tr>
+                  <th>Item</th>
+                  <th>Amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- Budget items will be added here -->
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
+      <!--charts-->
+      <section class="bot-section">
+        <div class="chart-container">
+          <canvas id="pieChart"></canvas>
+        </div>
+        <div class="chart-container">
+          <canvas id="barChart"></canvas>
+        </div>
+        <div class="chart-container">
+          <canvas id="histogramChart"></canvas>
+        </div>
+      </section>
+      <!--Settings-->
+      <section class="settings-section"></section>
+    </section>
+  </section>
+  <script src="./index.js"></script>
+</body>
 
 </html>
