--- a/index.html
+++ b/index.html
@@ -38,21 +38,9 @@
           </div>
         </li>
         <li>
-          <div class="nav-link nav-link3">
-            <i class="fas fa-clipboard-list"></i>
-            <p>Budget</p>
-          </div>
-        </li>
-        <li>
           <div class="nav-link nav-link4">
             <i class="fas fa-chart-pie"></i>
             <p>Stats</p>
-          </div>
-        </li>
-        <li>
-          <div class="nav-link nav-link5">
-            <i class="fas fa-cog"></i>
-            <p>Settings</p>
           </div>
         </li>
       </ul>
@@ -143,71 +131,55 @@
           <p id="file-error" style="color: red; display: none;">Please upload a valid XML file.</p>
         </div>
       </section>
-      <!--Print Section -->
-      <!-- <section class="print-section">
-      </section> -->
-      <!--Budget Section-->
-      <section class="budget-section">
-        <div class="budget-container">
-          <h1>Budget</h1>
-          <div class="budget-content">
-            <form id="budget-form">
-              <div class="form-group">
-                <label for="item">Item</label>
-                <input type="text" id="item" name="item" required>
-              </div>
-              <div class="form-group">
-                <label for="amount">Amount</label>
-                <input type="number" id="amount" name="amount" required>
-              </div>
-              <button type="submit">Add to Budget</button>
-            </form>
-            <table id="budget-table">
-              <thead>
-                <tr>
-                  <th>Item</th>
-                  <th>Amount</th>
-                </tr>
-              </thead>
-              <tbody>
-                <!-- Budget items will be added here -->
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </section>
       <!--charts-->
       <section class="bot-section">
-        <!-- <div class="charts-container">
+        <div class="full-content">
           <div class="chart-card">
-            <canvas id="lineChart" class="lineChart"></canvas>
-            <div class="line-controls">
-              <h3>Monthly Transaction Trends</h3>
-              <label><input type="checkbox" data-line="cashIn" checked> Cash In</label>
-              <label><input type="checkbox" data-line="cashOut" checked> Cash Out</label>
-              <label><input type="checkbox" data-line="fees" checked> Fees</label>
-              <label><input type="checkbox" data-line="balance" checked> Balance</label>
+            <h3>Monthly Trends Chart</h3>
+            <div class="chart1">
+              <canvas id="lineChart" class="lineChart"></canvas>
+              <div class="line-controls">
+                <label><input type="checkbox" data-line="Airtime" checked> Airtime</label>
+                <label><input type="checkbox" data-line="Bundles" checked> Bundles</label>
+                <label><input type="checkbox" data-line="CashPower" checked> CashPower</label>
+                <label><input type="checkbox" data-line="Incoming" checked> Incoming</label>
+                <label><input type="checkbox" data-line="Deposit" checked> Deposit</label>
+                <label><input type="checkbox" data-line="ThirdParty" checked> ThirdParty</label>
+                <label><input type="checkbox" data-line="Transfer" checked> Transfer</label>
+                <label><input type="checkbox" data-line="Payments" checked> Payments</label>
+                <label><input type="checkbox" data-line="Withdraw" checked> Withdraw</label>
+                <label><input type="checkbox" data-line="CodeHolders" checked> CodeHolders</label>
+                <label><input type="checkbox" data-line="NonCash" checked> NonCash</label>
+                <label><input type="checkbox" data-line="Failed" checked> Failed</label>
+                <label><input type="checkbox" data-line="Reversed" checked> Reversed</label>
+              </div>
             </div>
           </div>
           <div class="other-charts">
-            <div class="chart-card">
-              <h3>Transaction Distribution</h3>
+            <div class="chart-card1">
+              <h3>Spending Distribution</h3>
               <canvas id="pieChart" class="pieChart"></canvas>
             </div>
-            
-            <div class="chart-card">
-              <h3>Monthly Comparison</h3>
+
+            <div class="chart-card1">
+              <h3>Monthly Transaction Comparison</h3>
               <canvas id="barChart" class="barChart"></canvas>
             </div>
           </div>
-        </div> -->
+        </div>
       </section>
-      <!--Settings-->
-      <section class="settings-section"></section>
-    </section>
+      <!--Print Section-->
+      <section class="Print-section">
+        <h1>Download Transaction Representations</h1>
+        <div id="print-tables"></div>
+        <button id="download-pdf-btn" class="dbutton"><i class="fas fa-download"></i></button>
+      </section>
   </section>
   <script src="./index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.13/jspdf.plugin.autotable.min.js"></script>
 </body>
 
 </html>
